--- a/index.html
+++ b/index.html
@@ -19,7 +19,22 @@
           <img src="images/rock.png" alt="">
         </span>
       </div>
+      <div class="result">Lets Play!</div>
+    </div>
 
+    <div class="option-images">
+      <span class="option-image">
+        <img src="images/rock.png" alt="">
+        <p>Rock</p>
+      </span>
+      <span class="option-image">
+        <img src="images/paper.png" alt="">
+        <p>Paper</p>
+      </span>
+      <span class="option-image">
+        <img src="images/scissors.png" alt="">
+        <p>Scissors</p>
+      </span>
     </div>
   </section>
 </body>
